--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -10,3 +10,16 @@ services:
         environment:
             POSTGRES_DB: $DB_NAME
             POSTGRES_PASSWORD: $DB_PASSWORD
+
+    app:
+        container_name: url_shortener
+        image: url_shortener
+        ports:
+            - "5000:5000"
+        depends_on:
+            - db
+        env_file:
+            - .env
+        environment:
+            DB_HOST: db
+            ENV: ${ENV:-production}
