--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,6 +9,7 @@ requires = ["poetry-core>=1.0.0"]
 build-backend = "poetry.core.masonry.api"
 
 [tool.poetry.dependencies]
+alembic = "*"
 asyncpg = "*"
 databases = "*"
 email_validator = "*"
@@ -24,27 +25,17 @@ tenacity = "*"
 uvloop = "*"
 flake8 = "<5.0.0"
 
-[tool.poetry.dev-dependencies]
+[tool.poetry.group.dev.dependencies]
 asgi-lifespan = "*"
 alt-pytest-asyncio = "*"
-bandit = "*"
 blue = "*"
 Faker = "*"
-flake8 = "*"
-flake8-debugger = "*"
-flake8-pytest-style = "*"
 httpx = "*"
-isort = "*"
 mypy = "*"
-pep8-naming = "*"
 pip-audit = "*"
 pytest = "*"
 pytest-cov = "*"
-pyupgrade = "*"
-
-[tool.isort]
-profile = "black"
-line_length = 100
+ruff = "*"
 
 [tool.blue]
 line-length = 100
@@ -55,3 +46,33 @@ filterwarnings = ["ignore::DeprecationWarning"]
 [tool.mypy]
 ignore_missing_imports = true
 disallow_untyped_defs = true
+
+[tool.ruff]
+line-length = 100
+select = [
+    "ARG",
+    "B",
+    "C4",
+    "E",
+    "ERA",
+    "F",
+    "I",
+    "N",
+    "PLC",
+    "PLE",
+    "PLR",
+    "PLW",
+    "RET",
+    "S",
+    "T10",
+    "T10",
+    "UP",
+    "W",
+]
+ignore = ["B008"]
+target-version = "py311"
+
+[tool.ruff.per-file-ignores]
+"__init__.py" = ["F401"]
+"tests/**" = ["ARG", "PLR2004", "S"]
+"smoke_test.py" = ["S"]
