--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,46 +1,40 @@
-[tool.poetry]
-name = "URL Shortener"
+[project]
+name = "URL_Shortener"
 version = "0.1.0"
 description = ""
-authors = ["André Felipe Dias <andref.dias@gmail.com>"]
+authors = [{ name = "André Felipe Dias", email = "andref.dias@gmail.com" }]
+requires-python = ">=3.14"
+dependencies = [
+    "alembic",
+    "asyncpg",
+    "databases",
+    "email_validator",
+    "fastapi",
+    "hypercorn",
+    "loguru",
+    "orjson",
+    "passlib[argon2]",
+    "psycopg2",
+    "python-dotenv",
+    "tenacity",
+    "uvloop",
+]
 
-[build-system]
-requires = ["poetry-core>=1.0.0"]
-build-backend = "poetry.core.masonry.api"
-
-[tool.poetry.dependencies]
-alembic = "*"
-asyncpg = "*"
-databases = "*"
-email_validator = "*"
-fastapi = "*"
-hypercorn = "*"
-loguru = "*"
-orjson = "*"
-passlib = { extras = ["argon2"], version = "*" }
-psycopg2 = "*"
-python = "^3.10"
-python-dotenv = "*"
-tenacity = "*"
-uvloop = "*"
-flake8 = "<5.0.0"
-
-[tool.poetry.group.dev.dependencies]
-asgi-lifespan = "*"
-alt-pytest-asyncio = "*"
-blue = "*"
-Faker = "*"
-httpx = "*"
-mypy = "*"
-pip-audit = "*"
-pytest = "*"
-pytest-cov = "*"
-ruff = "*"
-
-[tool.blue]
-line-length = 100
+[dependency-groups]
+dev = [
+    "asgi-lifespan",
+    "httpx",
+    "mypy",
+    "pytest",
+    "pytest-asyncio",
+    "pytest-cov",
+    "ruff",
+]
 
 [tool.pytest.ini_options]
+asyncio_mode = "auto"
+asyncio_default_test_loop_scope = "session"
+asyncio_default_fixture_loop_scope = "session"
 filterwarnings = ["ignore::DeprecationWarning"]
 
 [tool.mypy]
@@ -49,7 +43,7 @@ disallow_untyped_defs = true
 
 [tool.ruff]
 line-length = 100
-select = [
+lint.select = [
     "ARG",
     "B",
     "C4",
@@ -69,10 +63,13 @@ select = [
     "UP",
     "W",
 ]
-ignore = ["B008"]
-target-version = "py311"
+lint.ignore = ["B008"]
+target-version = "py314"
 
-[tool.ruff.per-file-ignores]
+[tool.ruff.format]
+quote-style = "single"
+
+[tool.ruff.lint.per-file-ignores]
 "__init__.py" = ["F401"]
 "tests/**" = ["ARG", "PLR2004", "S"]
 "smoke_test.py" = ["S"]
