--- a/.github/workflows/continuous_integration.yml
+++ b/.github/workflows/continuous_integration.yml
@@ -9,31 +9,27 @@ jobs:
     steps:
 
         - name: Set up python
-          uses: actions/setup-python@v3
+          uses: actions/setup-python@v6
           with:
-              python-version: '3.10'
+            python-version-file: "pyproject.toml"
 
         - name: Check out repository
-          uses: actions/checkout@v2
+          uses: actions/checkout@v5
 
-        - name: Install Poetry
-          uses: snok/install-poetry@v1
+        - name: Install uv
+          uses: astral-sh/setup-uv@v6
           with:
-              virtualenvs-in-project: true
-
-        - name: Load cached venv
-          id: cached-poetry-dependencies
-          uses: actions/cache@v2
-          with:
-              path: .venv
-              key: venv-${{ hashFiles('**/poetry.lock') }}
+            version: "0.9.8"
+            enable-cache: true
 
         - name: Install dependencies
-          if: steps.cached-poetry-dependencies.outputs.cache-hit != 'true'
-          run: poetry install --no-interaction
+          run: uv sync --locked --no-install-project
 
         - name: Run tests
-          run: poetry run make test
+          run: uv run make test
 
         - name: Build Docker Image
-          run: poetry run make build
+          run: uv run make build
+
+        - name: Minimize uv cache
+          run: uv cache prune --ci
