--- a/.github/workflows/continuous_integration.yml
+++ b/.github/workflows/continuous_integration.yml
@@ -7,20 +7,19 @@ jobs:
   lint_and_test:
     runs-on: ubuntu-latest
     steps:
+        - name: Check out repository
+          uses: actions/checkout@v5
 
         - name: Set up python
           uses: actions/setup-python@v6
           with:
-            python-version-file: "pyproject.toml"
-
-        - name: Check out repository
-          uses: actions/checkout@v5
+              python-version-file: 'pyproject.toml'
 
         - name: Install uv
           uses: astral-sh/setup-uv@v6
           with:
-            version: "0.9.8"
-            enable-cache: true
+              version: "0.9.8"
+              enable-cache: true
 
         - name: Install dependencies
           run: uv sync --locked --no-install-project
